# gguf-model-manager-cli

./: .gitignore  PROGRESS.md  README.md  TASK.md  pyproject.toml  worker-log.txt
src/gguf_manager/: catalog.py  cli.py  download.py
