[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gguf-manager"
version = "0.1.0"
description = "A CLI tool for managing GGUF models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Silvio", email = "silvio@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
gguf-manager = "gguf_manager.cli:main"

[tool.setuptools.packages.find]
where = ["src"]